# aura-mcp

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  README.md  SECURITY.md  WORKFLOW.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_template.md
.github/workflows/: ci.yml  pages.yml
aura_mcp/: __init__.py  __main__.py
aura_mcp/cli/: __init__.py  main.py
aura_mcp/config/: __init__.py  config.yaml  loader.py
aura_mcp/core/: __init__.py  executor.py  interpreter.py  orchestrator.py  validator.py
aura_mcp/integrations/: __init__.py  notion.py
aura_mcp/plugins/: __init__.py  base.py  docker_plugin.py  filesystem_plugin.py  github_plugin.py  manager.py  notion_plugin.py  scaffolder_plugin.py
aura_mcp/server/: __init__.py  mcp_server.py
aura_mcp/utils/: __init__.py  file_utils.py  logger.py
docs/: CONFIG.md  PLUGINS.md  README.md
examples/: demo_commands.txt
scripts/: test_docker.sh  test_package_install.py
src/core/: orchestrator.js
src/mcp/: server.js
src/services/: executor.service.js  interpreter.service.js  llm.service.js  notion.service.js  validator.service.js
src/utils/: file.utils.js  logger.js
test/: notion.test.js
tests/: test_cli.py  test_config.py  test_interpreter.py  test_mcp_server.py  test_pipeline.py  test_plugins.py  test_scaffolder.py  test_validator.py
website/: index.html  style.css
(+5 files in other folders)
